infra/k8s/namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: my-service

---

apiVersion: v1
kind: Namespace
metadata:
  name: my-db

---

apiVersion: v1
kind: Namespace
metadata:
  name: my-redis

---

apiVersion: v1
kind: Namespace
metadata:
  name: my-mq

---
