infra/k8s/rabbitmq-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rabbitmq-depl
  namespace: my-others
spec:
  selector:
    matchLabels:
      app: rabbitmq-depl
  template:
    metadata:
      labels:
        app: rabbitmq-depl
    spec:
      containers:
      - name: rabbitmq-depl
        image: rabbitmq:3-management
        resources:
          limits:
            memory: "256Mi"
            cpu: "500m"
        ports:
        - containerPort: 5672
        - containerPort: 15672
        readinessProbe:
          tcpSocket:
            port: 5672
          initialDelaySeconds: 5
          periodSeconds: 5      
---
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq-svc
  namespace: my-others
spec:
  selector:
    app: rabbitmq-depl
  ports:
    - name: rabbitmq-svc
      protocol: TCP
      port: 5672
      targetPort: 5672
