infra/k8s/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: km12.dev
      http:
        paths:
          - path: /order
            pathType: Prefix
            backend:
              service:
                name: order-srv
                port:
                  number: 3000
