infra/k8s/ingress-svc.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: km12.dev
      http:
        paths:
          - path: /api/v1/user
            pathType: Prefix
            backend:
              service:
                name: user-svc
                port:
                  number: 3000
          - path: /api/v1/catalog
            pathType: Prefix
            backend:
              service:
                name: catalog-svc
                port:
                  number: 3000
